# network-warden

./: .gitignore  CODE_OF_CONDUCT.md  README.md  network_monitor.py  pyproject.toml
.github/workflows/: sphinx.yml
Speedtest/get_csv/: get_csv.py
data/: network_monitor.csv  speedtest.csv
docs/: index.md
docs/source/: api.rst  conf.py  index.rst  usage.rst
network_warden/data/: speedtest.csv
network_warden/get_csv/: get_csv.py
network_warden/graph_network/: graph_network.py  helpers.py
speedtest/graph_network/: graph_network.py
speedtest/speedtest/: speedtest.py
speedtest/tests/: test.py
src/network_warden/: __init__.py  __main__.py  basic_ui_gui.py  config.toml  graph_network.py  gui.py  gui_network.py  gui_settings.py  helpers.py  install.py  installation_gui.py  misc.py  network_monitor.py  tomli_helpers.py
