[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network_warden"
version = "0.1.0"
description = "Keep watch over your network and view common statistics in graphical format. Compatible with remote network monitoring devices."
readme = "README.md"
authors = [{ name = "Joey", email = "joswald250@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: GNU AGPL",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["network", "warden", "raspberry pi"]
requires-python = ">=3.8"

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pathlib",
    "tkinter",
    'tomli >= 1.1.0 ; python_version < "3.11"',
    "tomli-w",
    "tk >= 8.5",
    "pyqt >= 5"
]

[project.urls]
Homepage = "https://github.com/joswald250/network-warden"

[project.scripts]
network_warden = "network_warden.__main__:main"