[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "network_warden"
version = "0.1.0"
description = "Keep watch over your network and view common statistics in graphical format. Compatible with remote network monitoring devices."
readme = "README.md"
authors = [{ name = "Joey", email = "joswald250@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: GNU AGPL",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["network", "warden", "raspberry pi"]

[project.urls]
Homepage = "https://github.com/joswald250/network-warden"

[project.scripts]
network_warden = "network_warden.__main__:main"

[tool.poetry]
name = "poetry"
version = "1.1.13"
description = ""
authors = ["Joey <joswald250@gmail.com>"]
license = "AGPL-1.0-or-later"
readme = "README.md"
packages = [
    { include = "network_warden"}
]

[tool.poetry.dependencies]
python = ">=3.8"
tomli-w = "^1.0.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
pathlib = "^1.0.1"
tomli = "^2.0.1"
matplotlib = "^3.5.0"
Pillow = "<9.2"
DateTime = "^4.4"

[tool.poetry.dev-dependencies]
pytest = "^3.4"